objects/maps__ArcGISBatchPushSetting__c.object
<CustomObject>
    <fields>
        <fullName>maps__EnableLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FeatureIDFieldName__c</fullName>
        <label>FeatureIDFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__FeatureLayerURL__c</fullName>
        <label>FeatureLayerURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>maps__IsUpdatedFieldName__c</fullName>
        <label>IsUpdatedFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastPushedFieldName__c</fullName>
        <label>LastPushedFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LayerID__c</fullName>
        <label>LayerID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TemplateName__c</fullName>
        <label>TemplateName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps ArcGIS Batch Push Setting</label>
    <nameField>
        <label>Maps ArcGIS Batch Push Setting Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps ArcGIS Batch Push Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>